Resolve a Bug Where Spectrum Controls Remain Visible in Some Instances

--- a/Portal.CMS.Web/Content/Styles/Framework/framework.css
+++ b/Portal.CMS.Web/Content/Styles/Framework/framework.css
@@ -328,6 +328,11 @@
         color: black;
     }
 
+.sp-container
+{
+    display: none;
+}
+
 @media (max-width: 450px)
 {
     .admin-wrapper .button
